Fix error in r50429
git-svn-id: https://svn.r-project.org/R/trunk@50453 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -33,7 +33,7 @@ fixetc: $(wildcard ./etc/*)
 	
 fixdoc: $(wildcard ../CHANGES*)
 	$(CP) -p $^ $(R_HOME)/doc
-	@$(ECHO) done > fixhtml
+	@$(ECHO) done > fixdoc
 	
 svnonly:
 	@$(MAKE) -C ../../../doc/manual -f Makefile.win svnonly
