--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -2409,16 +2409,9 @@ sub check_pkg {
 			       "${pkgname}-Ex.Rout.save");
 		if(-f $Rex_out_save) {
 		    $log->checking("differences from '${pkgname}-Ex.Rout' to '${pkgname}-Ex.Rout.save'");
-		    $cmd = join(" ",
-				(${R::Vars::R_CMD},
-				 "Rdiff",
-				 &shell_quote_file_path("${pkgname}-Ex.Rout"),
-				 &shell_quote_file_path("${Rex_out_save}"),
-				 "0"));
-		    if(R_system($cmd)) {
-			$log->error();
-			$log->print("Comparison failed.\n");
-			exit(1);
+		    my @out = R_runR("invisible(tools::Rdiff('${pkgname}-Ex.Rout', '${Rex_out_save}',TRUE,TRUE))", "--slave --vanilla");
+		    if(scalar(@out) > 0) {
+			$log->print("\n" . join("\n", @out));
 		    }
 		    $log->result("OK");
 		}
