port r50463 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50464 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -992,6 +992,10 @@ foreach my $pkg (@ARGV) {
 			@lines = grep(!/$warn_re/, @lines);
 		    }
 
+		    ## 'Warning' from deldir 0.0-10
+		    my $warn_re = "Warning: The process for determining duplicated points";
+		    @lines = grep(!/$warn_re/, @lines);
+
 		    if(scalar(@lines) > 0) {
 			$log->warning();
 			$log->print("Found the following " .
@@ -1079,7 +1083,7 @@ sub check_pkg {
     $pkg =~ s/\/$//;
     if(-d $pkg) {
 	chdir($pkg)
-	  or die "Error: cannot change to directory '$pkg'\n";
+	  or die "Error: will not change to directory '$pkg'\n";
 	$pkgdir = R_cwd();
 	if($in_bundle) {
 	    $pkgname = basename($pkgdir);
