reword one message, put up all for translation
git-svn-id: https://svn.r-project.org/R/trunk@50559 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -117,6 +117,7 @@ src/nmath/bessel_i.c
 src/nmath/bessel_j.c
 src/nmath/bessel_k.c
 src/nmath/bessel_y.c
+src/nmath/nmath.h
 src/nmath/pnchisq.c
 src/nmath/polygamma.c
 src/nmath/rhyper.c
