suppress (correct) S4 method warnings for now
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50729 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -996,6 +996,11 @@ foreach my $pkg (@ARGV) {
 		    my $warn_re = "Warning: The process for determining duplicated points";
 		    @lines = grep(!/$warn_re/, @lines);
 
+		    ## Correct S4 warning that MM wants suppressed in
+		    ## a patch release because it was broken in 2.10.0
+		    my $warn_re = "^Warning: in method for";
+		    @lines = grep(!/$warn_re/, @lines);
+
 		    if(scalar(@lines) > 0) {
 			$log->warning();
 			$log->print("Found the following " .
