--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -657,6 +657,10 @@ foreach my $pkg (@ARGV) {
 		    ##     setgid MS-DOS executable, MZ for MS-DOS
 		    return if $file_path =~
 			m+msProcess/inst/data[12]/.*.txt$+;
+		    ## * ## WMBrukerParser/inst/Examples/C3ValidationExtractSmall/RobotRun1/2-100kDa/0_B1/1/1SLin/fid gives:
+		    ##     DOS executable (COM)
+		    return if $file_path =~
+			m+WMBrukerParser/inst/Examples/C3ValidationExtractSmall/RobotRun1/2-100kDa/0_B1/1/1SLin/fid+;
 		    my $file_name = basename($file_path);
 		    my $bare_path = $file_path;
 		    $bare_path =~ s+^$pkgdir/++;
