--- a/tests/Makefile.common
+++ b/tests/Makefile.common
@@ -10,7 +10,8 @@ test-src-gct = \
 	arith.R \
 	lm-tests.R \
 	ok-errors.R \
-	method-dispatch.R
+	method-dispatch.R \
+	array-subset.R
 test-src-strict-1 = \
 	$(test-src-gct) \
 	d-p-q-r-tests.R
