--- a/src/extra/xz/Makefile.win
+++ b/src/extra/xz/Makefile.win
@@ -11,20 +11,24 @@ SOURCES = \
  check.c common.c crc32_table.c crc32_tablegen.c \
  crc64_table.c crc64_tablegen.c delta_common.c delta_decoder.c \
  delta_encoder.c easy_buffer_encoder.c easy_decoder_memusage.c easy_encoder.c \
- easy_encoder_memusage.c easy_preset.c fastpos_table.c fastpos_tablegen.c \
+ easy_encoder_memusage.c easy_preset.c fastpos_table.c \
  filter_buffer_decoder.c filter_buffer_encoder.c filter_common.c \
  filter_decoder.c filter_encoder.c filter_flags_decoder.c \
  filter_flags_encoder.c ia64.c index.c index_decoder.c index_encoder.c \
  index_hash.c lz_decoder.c lz_encoder.c lz_encoder_mf.c lzma2_decoder.c \
  lzma2_encoder.c lzma_decoder.c lzma_encoder.c lzma_encoder_optimum_fast.c \
  lzma_encoder_optimum_normal.c lzma_encoder_presets.c powerpc.c \
- price_table.c price_tablegen.c sha256.c simple_coder.c simple_decoder.c \
+ price_table.c sha256.c simple_coder.c simple_decoder.c \
  simple_encoder.c sparc.c stream_buffer_decoder.c stream_buffer_encoder.c \
  stream_decoder.c stream_encoder.c stream_flags_common.c \
  stream_flags_decoder.c stream_flags_encoder.c subblock_decoder.c \
  subblock_decoder_helper.c vli_decoder.c vli_encoder.c vli_size.c x86.c
 
+ifeq ($(strip $(WIN)),64)
 OBJECTS = $(SOURCES:.c=.o) crc32_x86.o crc64_x86.o
+else
+OBJECTS = $(SOURCES:.c=.o) crc32_fast.o crc64_fast.o
+endif
 
 all:
 	@$(MAKE) -f Makefile.win stamp
