Document R -e EXPR in R --help display
git-svn-id: https://svn.r-project.org/R/trunk@50909 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/R.sh.in
+++ b/src/scripts/R.sh.in
@@ -86,6 +86,7 @@ Options:
   --arch=NAME		Specify a sub-architecture
   --args                Skip the rest of the command line
   -f, --file=FILE       Take input from 'FILE'
+  -e EXPR               Execute 'EXPR' and exit
 
 Commands:
   BATCH			Run R in batch mode
