changes for MinGW64 build
git-svn-id: https://svn.r-project.org/R/trunk@50910 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -9,13 +9,13 @@ all:
 	  cp ../../SVN-REVISION ../../SVN-REVISION.bak ; \
 	fi
 	@$(MK) rbuild
-	@$(MK) -C ../library -f Makefile.win all
+	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
 	@$(MK) htmldocs
 	@$(MK)  -C ../../po -f Makefile.win
 
 rpackages:
-	@$(MK) -C ../library -f Makefile.win all
+	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
 
 ## must be absolute and space-free.  
