--- a/src/gnuwin32/front-ends/rgico.rc
+++ b/src/gnuwin32/front-ends/rgico.rc
@@ -3,7 +3,9 @@ Rgui  ICON  R.ico
 #include <windows.h>
 #include "../../include/Rversion.h"
 
+#ifndef Win64
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "Rgui.exe.manifest"
+#endif
 
 VS_VERSION_INFO VERSIONINFO
 FILEVERSION R_FILEVERSION
