--- a/src/gnuwin32/front-ends/Makefile
+++ b/src/gnuwin32/front-ends/Makefile
@@ -73,13 +73,15 @@ Rgui-LINKFLAGS=-mwindows $(LARGE_ADDR) $(LARGE_STACK)
 Rterm-LINKFLAGS=$(LARGE_ADDR) $(LARGE_STACK)
 Rscript-LINKFLAGS=$(LARGE_ADDR) $(LARGE_STACK)
 
+ifneq ($(strip $(WIN)),64)
 Rgui.exe: graphappmain.o  rgui.o rgico.o
 Rterm.exe: graphappmain.o rterm.o rtico.o
-
-ifneq ($(strip $(WIN)),64)
 rcico.o: Rcmd.exe.manifest
 rgico.o: Rgui.exe.manifest
 rtico.o: Rterm.exe.manifest
+else
+Rgui.exe: rgui.o rgico64.o
+Rterm.exe: rterm.o rtico.o
 endif
 
 Rcmd.exe: rcmd.o ../rhome.o ../shext.o rcmdfn.o Renviron.o
