tweaks for mingw64 cross-compiler
git-svn-id: https://svn.r-project.org/R/trunk@50931 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/bitmap/Makefile
+++ b/src/gnuwin32/bitmap/Makefile
@@ -19,15 +19,15 @@ DLL: ../../../library/grDevices/libs/Rbitmap.dll
 buildzlib:
 	@$(MAKE) -C ../../extra/zlib -f Makefile.win
 
-## There is a makefile.mingw these days, but .std has always worked
+## There is a makefile.mingw these days
 ## Neither the makefile.{mingw,std} build pnggccrd.c but it is needed if
 ## the compiler defines __MMX__ , which the win64 gcc does.
 ## So we need to explicitly disable it.
 buildpng:
-	@$(MAKE) CC='$(CC)' \
+	$(MAKE) CC='$(CC)' AR='$(AR)' \
 	  CFLAGS="-O3 -I../../../extra/zlib -DPNG_NO_MMX_CODE" \
 	  RANLIB=$(RANLIB) ZLIBLIB=../../../extra/zlib -C $(PNGDIR) \
-	  -f scripts/makefile.std libpng.a
+	  -f scripts/makefile.mingw libpng.a
 
 # jconfig.h and Makefile obtained running 'CC="gcc -mno-cygwin" ./configure'
 # under CYGWIN. They are here since the configure script doesn't run 
@@ -40,8 +40,9 @@ buildjpeg: $(JPEGDIR)/jconfig.h Makefile.jpeg
 $(JPEGDIR)/jconfig.h: jconfig.h 
 	$(CP) jconfig.h $(JPEGDIR)/jconfig.h
 
+## This gives a lot of warnings on Win64, but seems to work
 buildtiff: $(JPEGDIR)/jconfig.h Makefile.tiff
-	$(MAKE) -C $(TIFFDIR) -f ../Makefile.tiff JPEGDIR=$(JPEGDIR)
+	$(MAKE) CC='$(CC)' AR='$(AR)' RANLIB=$(RANLIB) -C $(TIFFDIR) -f ../Makefile.tiff JPEGDIR=$(JPEGDIR)
 
 rbitmap-CPPFLAGS=-DHAVE_PNG -DHAVE_JPEG -DHAVE_TIFF -I. -I../../extra/zlib -I./$(PNGDIR) -I$(JPEGDIR) -I./$(TIFFDIR) -I../../include
 CFLAGS=-O3 -Wall -pedantic 
