tweaks for Win64
git-svn-id: https://svn.r-project.org/R/trunk@50937 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/nmath/standalone/Makefile.win
+++ b/src/nmath/standalone/Makefile.win
@@ -30,13 +30,12 @@ stamp-src: $(SOURCES_NMATH)
 	touch $@
 
 ifdef USE_IMPLIBS
-## dynamic test not implemented yet
 test: test-static.exe
 else
-test: test.exe test-static.exe
+test: test-static.exe test.exe
 endif
+
 ## see R-admin for alternatives
-test.exe: test.c
 test.exe: test.c
 	$(CC) -I../../include -DRMATH_DLL -o $@ $< -L. Rmath.dll
 	./$@
