--- a/doc/manual/Makefile.in
+++ b/doc/manual/Makefile.in
@@ -153,7 +153,7 @@ refman.dvi: $(refman_DEPENDENCIES) stamp-refman-dvi
 	  $(ECHO) "\\documentclass[$${opt}]{book}"; \
 	  opt="$(R_RD4DVI)"; \
 	  $(ECHO) "\\usepackage[$${opt}]{Rd}"; \
-	  $(ECHO) "\\usepackage[latin1]{inputenc}"; \
+	  $(ECHO) "\\usepackage[utf8]{inputenc}"; \
 	  cat $(srcdir)/refman.top; \
 	  texinputs=`(for f in $(refman_TEXINPUTS); \
 	    do $(ECHO) $${f}; done) | LC_COLLATE=C $(SORT)`; \
