Fix copy and paste leftover.
git-svn-id: https://svn.r-project.org/R/trunk@50999 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -2176,7 +2176,7 @@ sub check_pkg {
     }
 
     if($R_check_Rd_contents) {
-	$log->checking("Rd \\usage sections");
+	$log->checking("Rd contents");
 
 	my $any;
 
