--- a/src/modules/internet/Makefile.win
+++ b/src/modules/internet/Makefile.win
@@ -2,7 +2,7 @@
 include ../../gnuwin32/MkRules
 
 MODULE=internet
-all: makeMakedeps ../../../modules/internet.dll ../../../modules/internet2.dll
+all: makeMakedeps ../../../modules$(R_ARCH)/internet.dll ../../../modules$(R_ARCH)/internet2.dll
 
 CSOURCES=internet.c nanoftp.c nanohttp.c sockconn.c Rsock.c sock.c Rhttpd.c
 
@@ -11,14 +11,14 @@ CFLAGS=$(OPTFLAGS)
 
 WSOCK=-lws2_32
 
-../../../modules/internet.dll: internet.o nanoftp.o nanohttp.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
+../../../modules$(R_ARCH)/internet.dll: internet.o nanoftp.o nanohttp.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
 	$(MKDIR) -p ../../../modules
 	@$(ECHO) "EXPORTS" > internet.def
 	@$(ECHO) " R_init_internet" >> internet.def
 	$(DLL) -shared  -o $@ $^ internet.def -L../../../$(IMPDIR) -lR $(GRAPHAPP_LIB) $(WSOCK)
 	@$(RM) internet.def
 
-../../../modules/internet2.dll: internet2.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
+../../../modules$(R_ARCH)/internet2.dll: internet2.o sockconn.o Rhttpd.o Rsock.o sock.o dllversion.o
 	$(MKDIR) -p ../../../modules
 	@$(ECHO) "EXPORTS" > internet2.def
 	@$(ECHO) " R_init_internet2" >> internet2.def
