--- a/src/modules/lapack/Makefile.win
+++ b/src/modules/lapack/Makefile.win
@@ -8,7 +8,7 @@ all:
 ifdef USE_IMPLIBS
 	@$(MAKE) --no-print-directory -f Makefile.win implib
 endif
-	@$(MAKE) --no-print-directory -f Makefile.win ../../../modules/$(MODULE).dll
+	@$(MAKE) --no-print-directory -f Makefile.win ../../../modules$(R_ARCH)/$(MODULE).dll
 
 CSOURCES = Lapack.c
 OBJS=$(CSOURCES:.c=.o) dllversion.o
@@ -24,7 +24,7 @@ CFLAGS=$(OPTFLAGS)
 FFLAGS=$(FOPTFLAGS)
 dlamch-FFLAGS=-ffloat-store
 
-../../../modules/$(MODULE).dll: $(MODULE).dll
+../../../modules$(R_ARCH)/$(MODULE).dll: $(MODULE).dll
 	$(MKDIR) -p ../../../modules
 	$(CP) $< $@
 
