more Win64 merging
git-svn-id: https://svn.r-project.org/R/trunk@51033 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -30,7 +30,12 @@ fixhtml:  html/rwin.html
 fixetc: $(wildcard ./etc/*)
 	$(CP) -p $^ $(R_HOME)/etc
 ifeq ($(strip $(WIN)),64)
-	$(SED) -e 's/WIN = 32/WIN = 64/' -e "s/BINPREF =/BINPREF = $(BINPREF)/" etc/Makeconf > $(R_HOME)/etc/Makeconf
+	$(SED) -e 's/WIN = 32/WIN = 64/' \
+	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
+	  -e "s/R_ARCH =/R_ARCH = $(R_ARCH)/" \
+	  etc/Makeconf > $(R_HOME)/etc/Makeconf
+	$(MKDIR) $(R_HOME)/etc/x64
+	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
 endif
 	@$(ECHO) done > fixetc
 
