--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -267,6 +267,7 @@ distclean: clean
 	$(RM) ../../etc/Makeconf ../../etc/Rconsole ../../etc/Rdevga \
 	../../etc/Rprofile.site ../../etc/rgb.txt ../../etc/Rcmd_environ \
 	../../tests/*.Rout ../../tests/*.Rout.fail
+	$(RM) -r ../../etc/x64
 	$(RM) -r ../../share/zoneinfo
 	$(MAKE) -C fixed distclean
 	$(MAKE) -C ../include -f Makefile.win distclean
