make use of $(BINDIR)
git-svn-id: https://svn.r-project.org/R/trunk@51073 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/extra/graphapp/Makefile.win
+++ b/src/extra/graphapp/Makefile.win
@@ -15,7 +15,7 @@ SOURCES=$(wildcard *.c)
 OBJECTS=$(SOURCES:.c=.o)
 
 DLL: libR.dll.a Rgraphapp.dll
-	@cp Rgraphapp.dll ../../../bin
+	@cp Rgraphapp.dll ../../../$(BINDIR)
 
 
 ifdef USE_IMPLIBS
