clean up better
git-svn-id: https://svn.r-project.org/R/trunk@51074 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -281,6 +281,7 @@ distclean: clean
 		cran/md5sum.txt cran/*.$(RPREFIX) 
 	$(RM) -r .vignettes # it gets left behind if there is an error
 	$(RM) -r ../../share/locale
+	$(RM) ../../doc/CHANGES*
 	$(RM) Rpwd.exe # do this last of all
 
 veryclean: distclean
