--- a/tests/Examples/Makefile.win
+++ b/tests/Examples/Makefile.win
@@ -3,6 +3,9 @@
 # ${RHOME}/tests/Examples/Makefile.win
 
 RHOME=../..
+
+include $(RHOME)/src/gnuwin32/MkRules
+
 ECHO = echo
 
 R_EXE = $(RHOME)/$(BINDIR)/Rterm --slave --vanilla
