--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -28,7 +28,6 @@ fixhtml:  html/rwin.html
 	$(CP) -p html/rwin.html $(R_HOME)/doc/html/index.html
 	@$(ECHO) done > fixhtml
 
-## FIXME: substitute IMPDIR in all cases
 fixetc: $(wildcard ./etc/*)
 	$(CP) -p $^ $(R_HOME)/etc
 ifeq ($(strip $(WIN)),64)
@@ -40,6 +39,9 @@ ifeq ($(strip $(WIN)),64)
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 	$(MKDIR) -p $(R_HOME)/etc/x64
 	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
+else
+	$(SED) -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 endif
 	@$(ECHO) done > fixetc
 
