add support for jpeg-8
git-svn-id: https://svn.r-project.org/R/trunk@51082 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/bitmap/Makefile
+++ b/src/gnuwin32/bitmap/Makefile
@@ -1,6 +1,6 @@
 ## These can be overridden in MkRules
 
-## must be jpeg-6b or jpeg-7
+## must be jpeg-6b or jpeg-7 or jpeg-8
 JPEGDIR = jpeg-7
 PNGDIR = libpng
 TIFFDIR = libtiff
