add support for LOCAL_SOFT
git-svn-id: https://svn.r-project.org/R/trunk@51102 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/fixed/Makefile
+++ b/src/gnuwin32/fixed/Makefile
@@ -35,12 +35,14 @@ ifeq ($(strip $(WIN)),64)
 	  -e "s/-O3/-O2/" \
 	  -e "s/BINPREF =/BINPREF = $(BINPREF)/" \
 	  -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  -e "s|R_ARCH =|R_ARCH = $(R_ARCH)|" \
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 	$(MKDIR) -p $(R_HOME)/etc/x64
 	$(CP) -p $(R_HOME)/etc/Makeconf $(R_HOME)/etc/x64/Makeconf
 else
 	$(SED) -e "s/IMPDIR = bin/IMPDIR = $(IMPDIR)/" \
+	  -e "s|LOCAL_SOFT =|LOCAL_SOFT = $(LOCAL_SOFT)|" \
 	  etc/Makeconf > $(R_HOME)/etc/Makeconf
 endif
 	@$(ECHO) done > fixetc
